[package]
name = "earth-view"
version = "0.1.0"
authors = ["Ulysse Carion <ulysse@ulysse.io>"]

[dependencies.byteorder]
version = "*"

[dependencies.image]
version = "*"

[dependencies.cgmath]
version = "0.3"

[dependencies.num]
version = "0.1"

[dependencies.itertools]
version = "*"

[dependencies.gfx]
version = "*"

[dependencies.gfx_window_glfw]
version = "*"

[dependencies.glfw]
version = "*"

[dependencies.rand]
version = "*"

[dependencies.genmesh]
version = "*"
